--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,20 +1,25 @@
 <resources>
-    <string name="app_name">Porfolio</string>
+    <string name="app_name">Personal Porfolio</string>
 
     <string name="text_job">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem sequi molestias, voluptates, earum explicabo perspiciatis reiciendis ab quas, neque recusandae minus quos. Itaque reiciendis omnis natus sapiente corporis rem ad.</string>
-    <string name="job_name">Software Engineering &amp; Programmer</string>
-    <string name="personal_name">Jesús Mata</string>
-    <string name="personal_description">Soy un estudiante de Ingeniería en Sistemas Computacionales con habilidad en resolución de problemas y
-            experiencia trabajando en
-            equipo así como individual,
-            desarrollando aplicaciones
-            móviles, de escritorio y web para
-            el sector privado y público.</string>
-    <string name="current_job_title">EDUMARK</string>
-    <string name="current_job_description">Actualmente trabajo en EDUMARK como becario de desarrollo de software.</string>
-    <string name="lorem_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem sequi molestias, voluptates, earum explicabo perspiciatis reiciendis ab quas, neque recusandae minus quos. Itaque reiciendis omnis natus sapiente corporis rem ad.</string>
+    <string name="job_name_esp">Ingeniero en Sistemas Computacionales</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="personal_name">Jesús Mata</string>
+    <string name="current_job_description">Actualmente trabajo en EDUMARK como becario de desarrollo de software.</string>
+    <string name="personal_description">Soy un estudiante de Ingeniería en Sistemas Computacionales con habilidad en resolución de problemas y
+            experiencia trabajando en equipo así como individual desarrollando aplicaciones móviles, de escritorio y web para
+            el sector privado y público.</string>
+    <string name="personal_description_engl">I\'m Computer System Engineer student at Instituto Tecnol\ógico Superior de El Mante
+        I have great solving-problem skills and
+
+    </string>
+
+    <string name="job_name">Software Engineering &amp; Programmer </string>
+    <string name="current_job_title">EDUMARK</string>
+    <string name="current_job_description_eng">I\'m currently working at EDUMARK as a Software Developer Intern</string>
+    <string name="lorem_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem sequi molestias, voluptates, earum explicabo perspiciatis reiciendis ab quas, neque recusandae minus quos. Itaque reiciendis omnis natus sapiente corporis rem ad.</string>
+    <string name="chambee_description">Es una aplicación que busca reducir el costo entre productor y consumidor en el cual se hace trato directo</string>
+    <string name="mandame_description">Es una aplicación móvil utilizada hacer pedidos y entregas con el personal de la empresa MANDAME, diseñada para que no tengas que salir de la comodidad de tu casa</string>
+
 
 </resources>
